// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component should render component correctly 1`] = `
<div>
  Initial structure
</div>
`;

exports[`App component should render component correctly with props 1`] = `
<div>
  new text
</div>
`;
